<resources>
    <string name="app_name">Memorize Words</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterTarget">Введите cлово на изучаемом языке</string>
    <string name="enterNative">Введите cлово на родном языке</string>
    <string name="targetWord">Слово на изучаемом языке</string>
    <string name="nativeWord">Слово на родном языке</string>
    <string name="toList">Список слов</string>
    <string name="save">Сохранить</string>
    <string name="study">Учить</string>
    <string name="delete">Удалить</string>
    <string name="addToStudy">Включить в обучение</string>
    <string name="removeFromStudy">Исключить из обучения</string>
    <string name="swap">Поменять языки местами</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="add">Добавить</string>
    <string name="addWord">Добавить слово</string>
    <string name="studyMode">Режим Flashcard</string>
    <string name="testMode">Режим теста</string>
    <string name="wsMode">Режим Word Search</string>
    <string name="listEmpty">Здесь пока ничего нет! \n Добавьте первое слово</string>
    <string name="testImpossible">Недостаточно слов в базе данных \n Чтобы начать тест, нужно
        добавить не менее 4 слов</string>
    <string name="studyImpossible">В базе данных пока ничего нет \n Добавьте первое слово на
        вкладке "Добавить"</string>
    <string name="wsImpossible">Недостаточно слов в базе данных \n Чтобы начать игру, нужно
        добавить не менее 20 слов</string>
    <string name="showAnswer">Показать ответ</string>
    <string name="nextWord">Следующее слово</string>
    <string name="restart">Начать сначала</string>
    <string name="reallyDelete">Вы уверены, что хотите удалить это слово?</string>
    <string name="findWords">Найдите %1$d слов по горизонтали и %2$d слов по вертикали</string>
    <string name="title_activity_navdrawer">NavdrawerActivity</string>
    <string name="navigation_drawer_open">Открыть боковое меню</string>
    <string name="navigation_drawer_close">Закрыть боковое меню</string>
    <string name="nav_header_title">Memorize Words</string>
    <string name="nav_header_subtitle">Alena Inc.</string>
    <string name="nav_header_desc">Заголовок меню</string>
    <string name="action_settings">Настройки</string>
    <string name="count">%1$d / %2$d</string>
</resources>